Fix word-breaking on homepage and add temporary truncate fix for page width on smaller screens

--- a/app/routes/overview/components/EventItem.css
+++ b/app/routes/overview/components/EventItem.css
@@ -85,7 +85,11 @@
   font-size: 1.2rem;
   letter-spacing: 2px;
   text-transform: uppercase;
-  word-break: normal;
+  word-break: break-word;
+
+  @media (--mobile-device) {
+    height: auto;
+  }
 }
 
 .itemTitle > a {
